<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="118dp"
        android:layout_height="32dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="24dp"
        android:paddingLeft="5dp"
        android:text="Precio"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_codigoart"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_producto"
        app:layout_constraintVertical_bias="0.265" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="118dp"
        android:layout_height="32dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="24dp"
        android:text="Descripción"
        android:textSize="20sp"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_codigoart"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_producto"
        app:layout_constraintVertical_bias="0.132" />

    <TextView
        android:id="@+id/title_producto"
        android:layout_width="416dp"
        android:layout_height="64dp"
        android:background="@color/principal"
        android:paddingLeft="85dp"
        android:paddingTop="15dp"
        android:text="@string/title_producto"
        android:textColor="@color/black"
        android:textSize="24sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txt_codigoart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/txt_codigoart"
        android:textColor="@color/text_input"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161" />

    <EditText
        android:id="@+id/txt_descripcionart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/txt_descripcion_art"
        android:textColor="@color/text_input"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txt_precioart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/txt_precioart"
        android:textColor="@color/text_input"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/BotonRegistrarArt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Registrar"
        android:text="@string/BotonRegistrarArt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.601"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/BotonModificarArt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Modificar"
        android:text="@string/BotonModificarArt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.601"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/BotonBuscarArt"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:onClick="Buscar"
        android:text="@string/BotonBuscarArt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.677"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/BotonEliminarArt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Eliminar"
        android:text="@string/BotonEliminarArt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="77dp"
        android:layout_height="28dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="24dp"
        android:text="Código"
        android:paddingLeft="3dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_codigoart"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_producto"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="49dp"
        android:layout_height="58dp"
        android:layout_marginBottom="220dp"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/BotonBuscarArt"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="?android:attr/actionModeWebSearchDrawable" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/BotonModificarArt"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.116"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="51dp"
        android:layout_height="44dp"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/BotonEliminarArt"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.482"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="57dp"
        android:layout_height="61dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/title_producto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/icono_producto"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="26dp"

        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/BotonRegistrarArt"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

</androidx.constraintlayout.widget.ConstraintLayout>